# wxyc-fastapi

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: sync-api-yaml-schemas.py
src/wxyc_fastapi/: __init__.py
src/wxyc_fastapi/db/: __init__.py  lazy_pg.py
src/wxyc_fastapi/healthcheck/: __init__.py  liveness.py  readiness.py
src/wxyc_fastapi/http/: __init__.py  singleton.py
src/wxyc_fastapi/observability/: __init__.py  cache_stats.py  posthog.py  sentry.py  telemetry.py
tests/: conftest.py
tests/db/: test_lazy_pg.py
tests/healthcheck/: test_conformance.py  test_liveness.py  test_readiness.py
tests/healthcheck/fixtures/: api-yaml-schemas.json
tests/http/: test_singleton.py
tests/observability/: test_cache_stats.py  test_posthog.py  test_sentry.py  test_telemetry.py
